--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -18,7 +18,7 @@ html(lang="en")
         div#myStream
           video#myFace(autoplay, playsinline, width="400", height="400")
           button#mute Mute
-          button#camera Tuen Camera Off
+          button#camera Turn Camera Off
           select#cameras
           video#peersFace(autoplay, playsinline, width="400", height="400")
     script(src="/socket.io/socket.io.js")
